[gd_scene load_steps=8 format=3 uid="uid://bo6a7nnjkfp73"]

[ext_resource type="PackedScene" uid="uid://dutcb5r2u3f5c" path="res://Board.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://dw3c2a4h2q67t" path="res://Ui.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://brodg6p8yv2fk" path="res://score_board.tscn" id="2_0ufor"]
[ext_resource type="Script" path="res://Game.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://bc0y5oevjmsx7" path="res://Meter.tscn" id="4_edbd4"]
[ext_resource type="PackedScene" uid="uid://bbnlchimkhylp" path="res://Dart.tscn" id="5"]

[sub_resource type="LabelSettings" id="LabelSettings_owgeq"]
shadow_size = 3

[node name="Game" type="Node2D"]
script = ExtResource("3")

[node name="ScoreBoard" parent="." instance=ExtResource("2_0ufor")]
position = Vector2(610, 1)

[node name="Board" parent="." instance=ExtResource("1")]

[node name="Meter" parent="." instance=ExtResource("4_edbd4")]
position = Vector2(219, 514)

[node name="Ui" parent="." instance=ExtResource("2")]
visible = false
offset_left = 176.0
offset_top = 17.0
offset_right = 176.0
offset_bottom = 17.0

[node name="Dart" parent="." instance=ExtResource("5")]

[node name="Label" type="Label" parent="."]

[node name="Label2" type="Label" parent="."]
offset_left = 33.0
offset_top = 489.0
offset_right = 136.0
offset_bottom = 523.0

[node name="Label3" type="Label" parent="."]
offset_left = 10.0
offset_top = 596.0
offset_right = 337.0
offset_bottom = 637.0
label_settings = SubResource("LabelSettings_owgeq")

[node name="Label4" type="Label" parent="."]
offset_left = 20.0
offset_top = 251.0
offset_right = 60.0
offset_bottom = 274.0
